Added csv uploader and support to parse csv to object

--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -8,10 +8,7 @@
 						<label>Upload CSV</label>
 					</div>
 					<div class="large-9 columns">
-						<div class="dropzone" file-dropzone="[text/csv]"
-		                  file="image" file-name="imageFileName" data-max-file-size="3">
-		                  	<span>Drop CSV Here</span>
-					    </div>
+						<input type="file" fileread="uploadme" />
 					</div>
 				</div>
 				<div class="row">
